--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Create a div element for the box -->
     <div class="box">
-        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+        This is a demo of box model, try to replicate this box model in Html &amp; Css and pass all the test cases.
     </div>
 </body>
 </html>
